--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.4",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
-    "sass": "^1.56.1",
+    "sass": "^1.56.2",
+    "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
